chore: Bump dependency versions